syntax = "proto3";
package Common;
option go_package = "proto/pb;pb";

message Position {
    float x = 1;
    float y = 2;
    float z = 3;
}

message Velocity {
    float x = 1;
    float y = 2;
    float abs = 3;
}
