#ifndef COLOR_HH
#define COLOR_HH

namespace Colors {
enum Color { YELLOW, BLUE, NONE };
}

#endif // COLOR_HH
