#ifndef SIDE_HH
#define SIDE_HH

namespace Sides {
enum Side { RIGHT, LEFT, CENTER, UNDEFINED };
}

#endif // SIDE_HH
